--- a/Restaurant Theme/restaurant.html
+++ b/Restaurant Theme/restaurant.html
@@ -172,9 +172,9 @@
           </div>
       </div>
   </div>
-
+  
 <!--Chef Box-->
-
+ 
 <div class="container-fluid chef-box text-center">
     <div class="container">
        <img class="wow fadeInUp" src="pattern.svg">
@@ -203,15 +203,65 @@
                     <span><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></span>
                 </div>
             </div>
-
-
+            <div class="col-md-4 wow fadeInUp">
+                <img src="chef-3.jpeg" class=" chef-box-img">
+                <h4>Martin John</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis nam.</p>
+                <div class="social-icon-pack">
+                   <span><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></span>
+                    <span><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+                    <span><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></span>
+                    <span><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></span>
+                </div>
             </div>
         </div>
     </div>
 </div>
+ 
+<!--Reservations-->
+  <div class="container-fluid reservation-box text-center">
+      <div class="container">
+         <img class="wow fadeInUp" src="pattern.svg">
+         <h1 class="wow fadeInUp">Reservations</h1>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore totam, dolores.</p>
+          <div class="row justify-content-center wow fadeInUp">
+             <form class="col-md-8">
+  <div class="form-group justify-content-center">
+    <label for="formGroupExampleInput">Name</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Email</label>
+    <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Details</label>
+      <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your message here"></textarea>
+  </div>
+  
+  <a class="btn btn-primary contact-primary-button" href="#" role="button">Reserve Now</a>
+</form>
+              
+          </div>
+      </div>
+  </div>
+  
+  <footer class="footer wow fadeInUp">
+      <div class="container">
+         <div class="row">
+          <div class="text-muted col-md-6">Copyrights - Bistro Restuarant Theme V4 2017</div>
+          <div class="social-icon-pack-white col-md-6">
+                    <span><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></span>
+                    <span><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+                    <span><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></span>
+                    <span><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></span>
+                </div>
+                
+                </div>
+      </div>
+  </footer>
 
-<
-
+  
 
   
   
