--- a/Restaurant Theme/restaurant.html
+++ b/Restaurant Theme/restaurant.html
@@ -35,10 +35,15 @@
 
   </head>
   <body>
+
+
+
+
+
   
   
   <!--HOME-->
-  <div class="container-fluid bg-main">
+  <div class="container-fluid bg-main" id="home">
       <div class="container">
           <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,19 +54,20 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto wow fadeInUp">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Menu</a>
+        <a class="nav-link" href="#menu">Menu</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">TasteBuds</a>
+        <a class="nav-link" href="#TasteBuds">TasteBuds</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Our Chefs</a>
+        <a class="nav-link" href="#Our Chefs">Our Chefs</a>
       </li>
        <li class="nav-item">
-        <button class="btn btn-primary contact-primary-button">Reservations</button>
+
+           <button class="btn btn-primary contact-primary-button" href="Reservations">Reservations</button>
       </li>
     </ul>
   </div>
@@ -81,7 +87,7 @@
   
   
   <!--MENU-->
-  <div class="container-fluid main-menu">
+  <div class="container-fluid main-menu" id="menu">
       <div class="container menu-text">
         <div class="text-center">
             <img class="wow fadeInUp" src="pattern.svg">
@@ -145,7 +151,7 @@
       </div>
   </div>
   <!--TasteBuds-->
-  <div class="container-fluid main-tastebuds">
+  <div class="container-fluid main-tastebuds" id="TasteBuds">
       <div class="container text-center">
          <img class="wow fadeInUp" src="pattern.svg">
           <h1 class="wow fadeInUp">TasteBuds</h1>
@@ -175,7 +181,7 @@
   
 <!--Chef Box-->
  
-<div class="container-fluid chef-box text-center">
+<div class="container-fluid chef-box text-center" id="Our Chefs">
     <div class="container">
        <img class="wow fadeInUp" src="pattern.svg">
           <h1 class="wow fadeInUp">Our Chefs</h1>
@@ -219,7 +225,7 @@
 </div>
  
 <!--Reservations-->
-  <div class="container-fluid reservation-box text-center">
+  <div class="container-fluid reservation-box text-center" id="Reservations">
       <div class="container">
          <img class="wow fadeInUp" src="pattern.svg">
          <h1 class="wow fadeInUp">Reservations</h1>
